updated readme file

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "keywords": [
         "tropical",
         "sky",
+        "sunset",
+        "sunrise",
         "tropical-sky",
-        "prestonjayhil",
         "dark theme",
         "dark themes",
         "sky themes",
